vitrail-sqlite-macros/tests/ui/fail/missing_name.stderr
error: expected `name`
 --> tests/ui/fail/missing_name.rs:6:5
  |
6 |     model user {
  |     ^^^^^
